[project]
name = "ContextEngine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "google>=3.0.0",
    "google-genai>=1.57.0",
    "inngest>=0.5.13",
    "llama-index>=0.14.12",
    "llama-index-core>=0.14.12",
    "llama-index-readers-file>=0.5.6",
    "logging>=0.4.9.6",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "streamlit>=1.52.2",
    "uuid>=1.30",
    "uvicorn>=0.40.0",
]
